        Changed mallocs to fastMallocs and frees to fastFrees in GraphicsContext3D. Also added error returns         https://bugs.webkit.org/show_bug.cgi?id=30778

Canonical link: https://commits.webkit.org/42964@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51537 268f45cc-cd09-0410-ab3c-d52691b4dbfc